--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -2,11 +2,14 @@ body {
     margin: 0;
     padding: 0;
     color: #484848;
-    font: 14px;
+    font-size: 14px;
     font-family: Circular, "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
 
 .container {
     max-width: 1000px;
-    margin: 30px auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
 }
