[fix] position fixed instead absolute

--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -5,7 +5,7 @@ footer {
     border-top: 1px solid #cccccc;
     bottom: 0;
     display: flex;
-    position: absolute;
+    position: fixed;
     align-items: center;
     justify-content: center;
 }
